added src jsx compiled files and have the index.html use those

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="build/react.js"></script>
+        <script src="src/react.js"></script>
         <style>
             .hidden {
                 display: none;
@@ -9,6 +9,6 @@
     </head>
 <body>
     <div id="content"></div>
-    <script src="build/timer.js"></script>
+    <script src="src/timer.js"></script>
 </body>
 </html>
